Fix regular expression is not working on WebSocket filter
Previous CL https://crrev.com/c/4516057 always escape user input
patterns. This causes a valid regexp such as "(web)?socket" being
created as the /\(web\)\?socket/i object, not the /(web)?socket/i
object. As a result, the pattern cannot be matched as expected.

This CL will not escape valid regexp, only invalid regexp will be
escaped to ensure normal operation.

Bug: 336911505
Change-Id: I32f4eb24bc34a00234455bd651519df923c733fc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5508098
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ Daniel bellfield <dnlbellfield@gmail.com>
 Danny Eldridge <me@heardanieljames.com>
 Derek Li <the.derekli@gmail.com>
 Douglas Chiang <douglasdothnc@gmail.com>
+Dragonish <no.web.developer@outlook.com>
 Edward Trist <edwardtrist@gmail.com>
 Ergün Erdoğmuş <erdogmusergun@gmail.com>
 Eric Rannaud <eric.rannaud@gmail.com>
