--- a/AUTHORS
+++ b/AUTHORS
@@ -43,6 +43,7 @@ Jake Mulhern <mulherje@gmail.com>
 Jan Keitel <jan.keitel@gmail.com>
 Jeffrey Chen <jeffreyca16@gmail.com>
 Jesper van den Ende <jespertheend@gmail.com>
+Jerome Vouillon <jerome.vouillon@gmail.com>
 Juba Borgohain <chromiumjuba@gmail.com>
 Julian Geppert <spctstr@gmail.com>
 Junseo Yoo <joon.yoo181@berkeley.edu>
